feat: revamp code

--- a/package.json
+++ b/package.json
@@ -4,22 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "MODE=PRODUCTION node index.js",
-    "dev": "MODE=DEVELOPMENT nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "axios-cookiejar-support": "^1.0.0",
-    "axios-https-proxy-fix": "^0.17.1",
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "got": "^11.5.2",
-    "helmet": "^3.23.3",
-    "tough-cookie": "^4.0.0",
-    "tunnel": "0.0.6"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
